--- a/assets/sass/_cam-nang.scss
+++ b/assets/sass/_cam-nang.scss
@@ -41,8 +41,19 @@
   }
 
   .content_wrap {
+    margin-top: -20px;
     .blog_item {
       margin-top: 20px;
+      cursor: pointer;
+      transition: all .3s;
+      background: #fff;
+      border: 1px solid #e5e7eb;
+      border-radius: 8px;
+      &:hover{
+        border-radius: 8px;
+        box-shadow: 10px 7px 20px 3px rgba(0, 0, 0, 0.14);
+        transform: translate3d(0px, -8px, 15px);
+      }
       &_wrap {
       }
       &_content {
@@ -64,25 +75,32 @@
         margin-top: 20px;
         h3 {
           overflow: hidden;
-          color: var(--Gray-800---Main-text, #1f2937);
+          color:  #1f2937;
           text-overflow: ellipsis;
-          font-family: "Inter";
           font-size: 21px;
           font-style: normal;
           font-weight: 700;
-          line-height: 24px; /* 150% */
+          line-height: 24px;
+          display: -webkit-box;
+          -webkit-line-clamp: 2; 
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          padding: 0px 10px;
         }
         .excerpt {
           p {
             overflow: hidden;
-            color: var(--Gray-600---Sub, var(--gray-gray-5-sub, #4b5563));
+            color: #4b5563;
             text-overflow: ellipsis;
-            font-family: "Inter";
-
             font-size: 18px;
             font-style: normal;
             font-weight: 400;
-            line-height: 18px; /* 128.571% */
+            line-height: 18px; 
+            display: -webkit-box;
+            -webkit-line-clamp: 3; 
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            padding: 0px 10px;
           }
         }
       }
