--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,8 +1,8 @@
 .header {
   display: flex;
   // padding: 0px 136px;
-  background: var(--color-gray-gray-11-main-white, #FFF);
-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.10);
+  background: var(--color-gray-gray-11-main-white, #fff);
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.1);
   //   align-items: flex-start;
   gap: 10px;
   position: relative;
@@ -11,6 +11,9 @@ box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.10);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media screen and (max-width: 1100px) {
+      display: none;
+    }
   }
   &_logo {
     img {
@@ -36,7 +39,7 @@ box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.10);
           font-size: 20px;
           font-style: normal;
           font-weight: 700;
-          line-height: 28px; /* 140% */
+          line-height: 28px;
         }
       }
     }
@@ -55,15 +58,751 @@ box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.10);
         border-radius: 8px;
         background: var(--gray-gray-10-bgr, #f3f4f6);
         transition: all 0.5s linear;
-        &:hover{
-
-        background: $main-co;
+        position: relative;
+        &:hover {
+          background: $main-co;
         }
-        &:hover i{
+        &:hover i {
           transform: scale(1.3);
-         color: white;
-          }
+          color: white;
+        }
+        span {
+          top: -6px;
+          left: -6px;
+          color: #fff !important;
+          position: absolute;
+          padding: unset;
+          background: $main-co !important;
+          color: #fff !important;
+          border-radius: 50%;
+          width: 20px;
+          height: 20px;
+          font-size: 11px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
       }
     }
   }
+}
+
+.header_active {
+  position: fixed;
+  background: #fff;
+  top: 0;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  z-index: 999999;
+  width: 100%;
+}
+.header {
+  &_mobile_top {
+    display: none;
+    transition: all 0.5s linear;
+    @media screen and (max-width: 1100px) {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 5px;
+      align-items: center;
+    }
+    @media screen and (max-width: 500px) {
+      padding: 0px 5px;
+    }
+    .logo_menu {
+      i {
+        font-size: 30px;
+        @media screen and (max-width: 500px) {
+          font-size: 23px;
+        }
+      }
+    }
+    .logo_shop {
+      img {
+        width: 160px;
+        height: auto;
+        @media screen and (max-width: 500px) {
+          width: 110px;
+        }
+      }
+    }
+
+    .cart_mobile {
+      display: flex;
+      padding: 10px 10px;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      margin-left: 8px;
+      border-radius: 8px;
+      background: var(--gray-gray-10-bgr, #f3f4f6);
+      transition: all 0.5s linear;
+      position: relative;
+      @media screen and (max-width: 500px) {
+        margin-left: 0px;
+        padding: 5px 5px;
+        background: none;
+      }
+      i {
+        font-size: 30px;
+        @media screen and (max-width: 500px) {
+          font-size: 23px;
+        }
+      }
+      span {
+        top: -6px;
+        left: -6px;
+        color: #fff !important;
+        position: absolute;
+        padding: unset;
+        background: #f92296 !important;
+        color: #fff !important;
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        font-size: 11px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @media screen and (max-width: 500px) {
+          top: 0px;
+          left: 27px;
+          color: #fff !important;
+          position: absolute;
+          padding: unset;
+          background: #f92296 !important;
+          color: #fff !important;
+          border-radius: 50%;
+          width: 15px;
+          height: 15px;
+          font-size: 8px;
+        }
+      }
+    }
+  }
+}
+
+.header_mobile_bottom {
+  display: none;
+  @media screen and (max-width: 1100px) {
+    display: block;
+  }
+  .bottom-menu {
+    max-width: 100%;
+    width: 1024rem;
+    position: fixed;
+    bottom: -1px;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    @media screen and (max-width: 500px) {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+  }
+  .bottom-menu a {
+    // font-family: calibri;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    padding: 5px;
+    color: #949494;
+    font-weight: 600;
+    font-size: 12px;
+    text-decoration: none;
+    transition: all 0.3s;
+    left: 0;
+    &.active {
+      color: $main-co;
+    }
+    span {
+      @media screen and (max-width: 500px) {
+        display: none;
+      }
+    }
+  }
+  .bottom-menu a i {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+  .bottom-menu a.sat {
+    background-color: $main-co;
+    color: #fff;
+    border-radius: 100%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -15px;
+    border: 6px solid #fff;
+  }
+  .bottom-menu a.sat:focus {
+    border-color: $main-co;
+    color: #fff;
+  }
+  .bottom-menu a.active,
+  .bottom-menu a:focus {
+    color: $main-co;
+  }
+  .bottom-menu a:last-child {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  span.bosluk {
+    flex: 1;
+  }
+}
+
+//menu mobile left
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 998;
+  display: none;
+  // transition: all 0.5s linear;
+}
+
+.mobile-menu-overlay {
+  position: fixed;
+  top: 0;
+  left: -100%; /* Điểm bắt đầu bên trái ngoài màn hình */
+  width: 50%; /* Chỉ hiển thị 50% chiều rộng của màn hình */
+  height: 100%;
+  background-color: #fff;
+  z-index: 999;
+  transition: left 0.5s;
+}
+
+.mobile-menu {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  transform: translate(0, -50%);
+  list-style: none;
+  padding: 0;
+
+  li {
+    margin: 10px 0;
+    text-align: center;
+
+    a {
+      color: white;
+      text-decoration: none;
+      font-size: 24px;
+    }
+  }
+}
+
+.show-mobile-menu {
+  left: 0;
+}
+
+$secondary-color: #6c757d;
+.mobile-menu-overlay {
+  transition: all 0.5s linear;
+  .web-container {
+    .logo_shop_ov {
+      border-bottom: 1px solid $main-co;
+      margin-bottom: 20px;
+      img {
+        width: 100%;
+        transform: scale(0.6);
+      }
+    }
+    .nav-menu {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      .sub-menu {
+        list-style: none;
+        display: none;
+        &.active {
+          display: block;
+        }
+      }
+
+      li {
+        position: relative;
+        color: black;
+        font-size: 18px;
+        font-weight: 600;
+        ul {
+          li {
+            a {
+              text-decoration: none;
+              color: $secondary-color;
+              display: block;
+              padding: 10px 20px;
+              transition: background-color 0.3s;
+              @media screen and (max-width: 500px) {
+                font-size: 14px;
+                padding: 5px 0px 5px 0px;
+              }
+            }
+          }
+        }
+
+        p {
+          text-decoration: none;
+          color: $secondary-color;
+          display: block;
+          padding: 10px 20px;
+          transition: background-color 0.3s;
+          @media screen and (max-width: 500px) {
+            font-size: 14px;
+            margin: 0;
+          }
+
+          &:hover {
+            background-color: $main-co;
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+
+// .mobile_order_item {
+//   position: fixed;
+//   top: 0;
+//   right: -100%; /* Điểm bắt đầu bên trái ngoài màn hình */
+//   width: 80%; /* Chỉ hiển thị 50% chiều rộng của màn hình */
+//   height: 100%;
+//   background-color: #fff;
+//   z-index: 999;
+//   transition: left 0.5s;
+//   transition: all 0.5s linear;
+//   .cart_main2{
+//     @media screen and (max-width: 500px) {
+//       overflow-y: scroll;
+//       height: 100%;
+//      }
+
+//     .woocommerce-cart-form__cart-item1{
+//       @media screen and (max-width: 500px) {
+//          display: flex;
+//          flex-direction: column;
+//          overflow: auto ;
+//          border-bottom: 1px solid #000;
+//          margin-bottom: 10px;
+//       }
+//     }
+//   }
+//   .title-mycart {
+//     border: 1px solid rgba(0, 0, 0, 0.1);
+//     border-radius: 8px 8px 0 0;
+//     border-bottom: 0;
+//     text-align: center;
+//     background: #f7f6f7;
+//     font-size: 22px;
+//     text-transform: uppercase;
+//     padding: 10px 0;
+//     margin: 0;
+//     margin-bottom: 20px;
+//   }
+//   .product-thumbnail1 {
+//     a {
+//       img {
+//         height: auto;
+//         max-width: 100%;
+//         object-fit: cover;
+//         vertical-align: middle;
+//         @media screen and (max-width: 500px) {
+//           height: 150px;
+//        }
+//       }
+//     }
+//   }
+//   .product-remove1 {
+//     a {
+//       display: block;
+//       font-size: 1.5em;
+//       height: 1em;
+//       width: 1em;
+//       text-align: center;
+//       line-height: 1;
+//       border-radius: 100%;
+//       color: red !important;
+//       text-decoration: none;
+//       font-weight: 700;
+//       border: 0;
+//     }
+//     @media screen and (max-width: 500px) {
+//       display: none;
+//    }
+//   }
+//   .product-name1 {
+//     text-align: center;
+//     a{
+//       @media screen and (max-width: 500px) {
+//         color: #000;
+//       }
+//     }
+//   }
+//   .product-price1 {
+//     span {
+//       margin-right: 10px;
+
+//     }
+//     @media screen and (max-width: 500px) {
+//       text-align: end;
+//    }
+//   }
+//   .product-quantity1 {
+//     margin-left: 5px;
+//     .quantity .input-text {
+//       text-align: center;
+//       padding-top: 5px;
+//     }
+//     @media screen and (max-width: 500px) {
+//       margin-bottom: 20px;
+//       text-align: end;
+//    }
+//   }
+//   .cart-collaterals1{
+//     display: flex;
+//     justify-content: end;
+//     margin-right: 20px;
+//   }
+//   .wc-proceed-to-checkout{
+//     margin-top: 20px;
+//     display: flex;
+//     justify-content: end;
+//     a{
+//       background: #F92296 !important;
+//       color: #fff;
+//       padding: 13px 20px;
+//       border-radius: 6px;
+//     }
+//   }
+//   .show_view_cart{
+//     display: flex;
+//     justify-content: end;
+//     margin-right: 20px;
+//     margin-top: 20px;
+
+//     a{
+//       background: #F92296 !important;
+//     color: #fff;
+//     padding: 10px 47px;
+//     border-radius: 6px;
+//     }
+//   }
+// }
+// .show_order_item {
+//   right: 0;
+// }
+
+.popScroll {
+  display: none;
+}
+/* CSS */
+.overlay_popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  z-index: 9999;
+}
+
+.popScroll {
+  position: fixed;
+  margin-top: 4%;
+
+  height: auto;
+  z-index: 99999;
+  display: none;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+ 
+  &.hien{
+    display: none;
+
+  }
+ 
+  .popup {
+    z-index: 10;
+    width: 500px;
+    height: 300px;
+    position: relative;
+    margin: 20px auto;
+    display: block;
+    text-align: center;
+    -moz-background-clip: padding;
+    -o-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box; /* prevents bg color from leaking outside the border */
+    background-color: #fff; /* layer fill content */
+    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.18); /* drop shadow */
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.18); /* drop shadow */
+    -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.18); /* drop shadow */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.18); /* drop shadow */
+    -webkit-transform-origin: top center;
+    -moz-transform-origin: top center;
+    -o-transform-origin: top center;
+    transform-origin: top center;
+    -webkit-animation: iconosani 1.2s forwards;
+    animation: iconosani 1.2s forwards;
+    -moz-animation: iconosani 1.2s forwards;
+    -o-animation: iconosani 1.2s forwards;
+  }
+  @-webkit-keyframes iconosani {
+    0% {
+      -webkit-transform: perspective(800px) rotateX(-90deg);
+      -moz-transform: perspective(800px) rotateX(-90deg);
+      -o-transform: perspective(800px) rotateX(-90deg);
+      opacity: 1;
+    }
+    40% {
+      -webkit-transform: perspective(800px) rotateX(30deg);
+      -moz-transform: perspective(800px) rotateX(30deg);
+      -o-transform: perspective(800px) rotateX(30deg);
+      opacity: 1;
+    }
+    70% {
+      -webkit-transform: perspective(800px) rotateX(-10deg);
+      -moz-transform: perspective(800px) rotateX(-10deg);
+      -o-transform: perspective(800px) rotateX(-10deg);
+    }
+    100% {
+      -webkit-transform: perspective(800px) rotateX(0deg);
+      -moz-transform: perspective(800px) rotateX(0deg);
+      -o-transform: perspective(800px) rotateX(0deg);
+      opacity: 1;
+    }
+  }
+  h1 {
+    height: 60px;
+    position: relative;
+    color: #fff;
+    font: 25px/60px sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    background: $main-co;
+    .btn_close{
+      position: absolute;
+      right: 2%;
+      top: -2%;
+      font-size: 18px;
+      color: #fff;
+      border: none;
+      background-color: none;
+      background: none;
+    }
+  }
+  form {
+    margin: 10px auto;
+  }
+  .subscribe-widget .email-form {
+    font-size: 13px;
+    color: #999999;
+    padding-left: 6px;
+    width: 270px;
+    border: 1px solid #e0e0e0;
+    padding: 5px 0 5px 5px;
+    line-height: 25px;
+  }
+
+  .subscribe-widget .button {
+    background: $main-co;
+    padding: 8px 15px;
+    color: #fff;
+    border: none;
+    line-height: 25px;
+    margin-left: 0;
+    cursor: pointer;
+  }
+  input[type="submit"] {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    -o-appearance: button;
+    cursor: pointer;
+  }
+  p {
+    padding: 1px 5px;
+    font-family: "Open Sans";
+    font-size: 17px;
+    margin-bottom: 10px;
+  }
+  .ribbon {
+    position: absolute;
+    z-index: 100;
+    width: 120px;
+    height: 100px;
+    overflow: hidden;
+  }
+
+  .ribbon.top-left {
+    top: -2.6px;
+    left: -5px;
+  }
+
+  .ribbon.top-left.ribbon-primary > small {
+    *zoom: 1;
+    filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF428BCA', endColorstr='#FF2A6496');
+    background-image: -moz-linear-gradient(top, #428bca 0%, #2a6496 100%);
+    background-image: -webkit-linear-gradient(top, #428bca 0%, #2a6496 100%);
+    background-image: linear-gradient(to bottom, #428bca 0%, #2a6496 100%);
+    position: absolute;
+    display: block;
+    width: 100%;
+    padding: 8px 10px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 65%;
+    color: white;
+    background-color: #428bca;
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -moz-box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
+    top: 16px;
+    left: -27px;
+  }
+  .ribbon.top-left.ribbon-primary > small:before,
+  .ribbon.top-left.ribbon-primary > small:after {
+    position: absolute;
+    content: " ";
+  }
+  .ribbon.top-left.ribbon-primary > small:before {
+    left: 0;
+  }
+  .ribbon.top-left.ribbon-primary > small:after {
+    right: 0;
+  }
+  .ribbon.top-left.ribbon-primary > small:before,
+  .ribbon.top-left.ribbon-primary > small:after {
+    bottom: -3px;
+    border-top: 3px solid #0e2132;
+    border-left: 3px solid transparent;
+    border-right: 3px solid transparent;
+  }
+  
+@media screen and (max-width: 600px) {
+  .popup {
+    width: 370px;
+    height: 480px;
+  }
+
+  .popScroll h1 {
+    height: 40px;
+    font: 18px/40px sans-serif;
+  }
+
+  .subscribe-widget .email-form {
+    width: 210px;
+  }
+
+  .adstext {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .popup {
+    width: 350px;
+    height: 480px;
+  }
+
+  .popScroll h1 {
+    height: 40px;
+    font: 18px/40px sans-serif;
+  }
+
+  .subscribe-widget .email-form {
+    width: 210px;
+  }
+
+  .banner {
+    margin: 10px auto;
+  }
+
+  .adstext {
+    margin-top: 20px;
+  }
+}
+
+input.email-form:active,
+input.email-form:focus {
+  -webkit-animation: fade 0.55s ease-in;
+  -moz-animation: fade 0.55s ease-in;
+  animation: fade 0.55s ease-in;
+}
+
+@-webkit-keyframes fade {
+  0% {
+    box-shadow: 0 0 0 0 transparent;
+  }
+
+  66% {
+    box-shadow: 0 0 0 10px #3d79d0, 0 0 0 12px white;
+  }
+
+  100% {
+    box-shadow: 0 0 0 20px transparent, 0 0 0 22px transparent;
+  }
+}
+@-moz-keyframes fade {
+  0% {
+    box-shadow: 0 0 0 0 transparent;
+  }
+
+  66% {
+    box-shadow: 0 0 0 10px #3d79d0, 0 0 0 12px white;
+  }
+
+  100% {
+    box-shadow: 0 0 0 20px transparent, 0 0 0 22px transparent;
+  }
+}
+@-o-keyframes fade {
+  0% {
+    box-shadow: 0 0 0 0 transparent;
+  }
+
+  66% {
+    box-shadow: 0 0 0 10px #3d79d0, 0 0 0 12px white;
+  }
+
+  100% {
+    box-shadow: 0 0 0 20px transparent, 0 0 0 22px transparent;
+  }
+}
+@keyframes fade {
+  0% {
+    box-shadow: 0 0 0 0 transparent;
+  }
+
+  66% {
+    box-shadow: 0 0 0 10px #3d79d0, 0 0 0 12px white;
+  }
+
+  100% {
+    box-shadow: 0 0 0 20px transparent, 0 0 0 22px transparent;
+  }
+}
+
 }
