--- a/assets/sass/_home-category.scss
+++ b/assets/sass/_home-category.scss
@@ -62,7 +62,7 @@
     
     .category {
       &_item {
-        width: 200px;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -97,7 +97,7 @@
       &_title {
         h4{
             color: #7b7b7b;
-            font-size: 18px;
+            font-size: 16px;
             line-height: 36px;
             font-weight: 700;
            
