--- a/assets/sass/_home-flashsale.scss
+++ b/assets/sass/_home-flashsale.scss
@@ -83,46 +83,81 @@
       &_item {
         margin-top: 10px;
         margin-bottom: 10px;
+        transition: all .5s;
+        background: #fff;
+        border: 1px solid #e5e7eb;
+        border-radius: 8px;
+        &:hover{
+          border-radius: 8px;
+          box-shadow: 10px 7px 20px 3px rgba(0,0,0,.14);
+          transform: translate3d(0px,-8px,15px);
+        }
       }
+      // &_top {
+      //   margin-bottom: 10px;
+      //   transition: all .5s;
+      //   &:hover img{
+      //     transform: scale(1.05);
+      //   }
+    
+      //   img {
+      //     display: flex;
+      //     height: 280px;
+      //     justify-content: center;s
+      //     align-items: center;
+      //     align-self: stretch;
+      //     border-radius: 8px;
+      //     object-fit: cover;
+      //     width: 100%;
+         
+      //   }
+      // }
       &_top {
         margin-bottom: 10px;
+        transition: all 0.5s;
+        // position: relative;
+        overflow: hidden;
+        border-radius: 8px;
+        max-width: 100%;
+        height: 280px;
+      
+        &:hover img {
+          transform: scale(1.1);
+        }
+      
         img {
-          display: flex;
-          height: 280px;
-          justify-content: center;
-          align-items: center;
-          align-self: stretch;
-          border-radius: 8px;
-          object-fit: cover;
+          transition: all 0.5s;
           width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
       }
       &_bottom {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         .price_wrap {
           display: flex;
           justify-content: space-between;
+          padding: 0px 5px;
           .oldprice {
             display: flex;
+            padding-top: 3px;
             p {
-              margin-right: 15px;
+              margin-right: 0px;
             }
             .oldprice1 {
-              color: var(--gray-gray-7-opacity, #9ca3af);
-
-              /* D_Promotional */
-              font-family: Inter;
-              font-size: 16px;
+              color: #9ca3af;
+              font-size: 14px;
               font-style: normal;
               font-weight: 400;
               line-height: 18px; /* 128.571% */
-              text-decoration-line: strikethrough;
+              text-decoration-line: line-through;
+              margin-right: 2px;
             }
             .oldprice2 {
               color: var(--second-red, #ef4444);
-
-              /* D_P_14 */
-              font-family: Inter;
-              font-size: 16px;
+              font-size: 14px;
               font-style: normal;
               font-weight: 400;
               line-height: 18px; /* 128.571% */
@@ -132,9 +167,6 @@
           .newprice {
             p {
               color: var(--second-red, #ef4444);
-
-              /* D_h6 */
-              font-family: Inter;
               font-size: 16px;
               font-style: normal;
               font-weight: 700;
@@ -145,12 +177,17 @@
       }
       &_title {
         color: var(--gray-gray-3-main, #1f2937);
-        font-family: Inter;
-        font-size: 19px;
+        font-size: 18px;
         font-style: normal;
+        padding: 0px 5px;
         font-weight: 400;
         line-height: 24px; /* 150% */
         text-transform: capitalize;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
