upload account woocomerce

--- a/assets/sass/_cam-nang.scss
+++ b/assets/sass/_cam-nang.scss
@@ -77,7 +77,7 @@
           overflow: hidden;
           color:  #1f2937;
           text-overflow: ellipsis;
-          font-size: 21px;
+          font-size: 18px;
           font-style: normal;
           font-weight: 700;
           line-height: 24px;
@@ -86,13 +86,14 @@
           -webkit-box-orient: vertical;
           overflow: hidden;
           padding: 0px 10px;
+          text-transform: capitalize;
         }
         .excerpt {
           p {
             overflow: hidden;
             color: #4b5563;
             text-overflow: ellipsis;
-            font-size: 18px;
+            font-size: 16px;
             font-style: normal;
             font-weight: 400;
             line-height: 18px; 
