--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -425,5 +425,13 @@ main {
 @import "cua-hang/bussiness-product";
 @import "cua-hang/chi-tiet-san-pham";
 @import "tai-khoan/dia-chi";
+@import "tai-khoan/don-hang";
+@import "tai-khoan/sidebar";
+@import "search";
+@import "tai-khoan/tai-khoan";
+@import "tai-khoan/lost-password";
+@import "tai-khoan/my-address";
+@import "tai-khoan/edit-account";
+@import "tai-khoan/order-detail";
 
 @import "footer";
