--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -27,6 +27,30 @@
     h4{
       color: white;
     }
+    .support{
+      li{
+        font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 24px; 
+          color: white;
+          margin-right: 5px;
+          padding-bottom: 15px;
+      }
+    }
+    #my-custom-menu{
+      li{
+        a{
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 24px; 
+          color: white;
+          margin-right: 5px;
+          padding-bottom: 15px;
+        }
+      }
+    }
     ul {
       padding: 0;
       li {
