--- a/assets/sass/_home-flashsale.scss
+++ b/assets/sass/_home-flashsale.scss
@@ -48,8 +48,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 40px;
-            width: 40px;
+            height: 30px;
+            width: 30px;
+            font-size: 14px;
             border-radius: 8px;
             margin-right: 5px;
             margin-left: 5px;
