--- a/assets/sass/_page-lien-he.scss
+++ b/assets/sass/_page-lien-he.scss
@@ -61,6 +61,7 @@
         -webkit-filter: brightness(0) invert(1);
         width: 100%;
         max-height: 100%;
+        opacity: 0.2;
         // backdrop-filter: blur(4px);
       }
     }
