--- a/assets/sass/_single-cam-nang.scss
+++ b/assets/sass/_single-cam-nang.scss
@@ -10,17 +10,17 @@
       img {
         width: 100%;
         margin-bottom: 20px;
+        height: auto;
       }
     }
     h1 {
       color: var(--pink-pink-4-main, #f92296);
-      font-size: 36px;
+      font-size: 25px;
       font-style: normal;
       font-weight: 700;
       line-height: 44px; /* 122.222% */
       @media (max-width: 600px) {
-        line-height: 25px; 
-
+        line-height: 25px;
       }
     }
     p {
@@ -47,35 +47,53 @@
       }
     }
   }
-  .asc {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  .asc1 {
+    background-color: #f9f9f9;
+    padding: 10px;
+    border-radius: 4px;
   }
   .content_right {
     width: 100%;
     position: relative;
     margin-bottom: 20px;
-    .bgr_img {
-      position: absolute;
-      z-index: -1;
-      width: 100%;
-      border-radius: 4px;
+    display: flex;
+    background-color: #fff;
+    border-radius: 8px;
+    transition: all 0.5s linear;
+    &:hover {
+      border-radius: 8px;
+      box-shadow: 8px 5px 10px 2px rgba(0, 0, 0, 0.14);
+      transform: translate3d(0px, -4px, 15px);
+    }
+    &:hover .content_main p {
+      color: $main-co;
+    }
+    &_img {
       img {
-        width: 100%;
-        height: 60px;
-        border-radius: 4px;
+        border-radius: 8px;
+        height: 100px;
       }
     }
-    .cm_overlay {
-      background-color: #ddd;
-      width: 100%;
-      opacity: 60%;
-      height: 60px;
-      position: absolute;
-      z-index: 3;
-      border-radius: 4px;
-    }
+    // .bgr_img {
+    //   position: absolute;
+    //   z-index: -1;
+    //   width: 100%;
+    //   border-radius: 4px;
+    //   img {
+    //     width: 100%;
+    //     height: 60px;
+    //     border-radius: 4px;
+    //   }
+    // }
+    // .cm_overlay {
+    //   background-color: #ddd;
+    //   width: 100%;
+    //   opacity: 60%;
+    //   height: 60px;
+    //   position: absolute;
+    //   z-index: 3;
+    //   border-radius: 4px;
+    // }
     .content_main {
       display: flex;
       padding: 8px;
@@ -87,18 +105,31 @@
       z-index: 5;
       height: 60px;
       border-radius: 4px;
+      padding: 15px 10px 0px 10px;
 
-      h4 {
+      p {
         color: black;
         font-style: normal;
         font-weight: 700;
         line-height: 18px;
+        text-transform: capitalize;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        transition: all 0.3s linear;
+
+        &:hover {
+          color: $main-co;
+        }
       }
     }
   }
 }
 
 .related_cm {
+  margin-bottom: 20px;
   .related {
     &_wrap {
       display: flex;
@@ -143,7 +174,13 @@
         font-size: 18px;
         font-style: normal;
         font-weight: 700;
-        line-height: 24px; /* 150% */
+        line-height: 24px;
+        text-transform: capitalize;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       p {
         overflow: hidden;
@@ -152,7 +189,13 @@
         font-size: 16px;
         font-style: normal;
         font-weight: 400;
-        line-height: 18px; /* 128.571% */
+        line-height: 18px;
+        text-transform: capitalize;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
     &_img {
@@ -164,7 +207,6 @@
         object-fit: cover;
         @media (max-width: 600px) {
           height: 120px;
-
         }
       }
     }
