--- a/assets/sass/cua-hang/_cua-hang.scss
+++ b/assets/sass/cua-hang/_cua-hang.scss
@@ -286,10 +286,16 @@
 .woocommerce_breadcrumb_ct{
   margin: 0 auto !important;
   font-size: 18px !important;
-  padding: 15px 0px 15px 0px !important;
+  padding: 15px 0px 15px 10px !important;
 }
 
 .price{
   color: $main-co !important;
   font-size: 20px !important;
 }
+ #block-5{
+  display: none;
+ }
+ #block-6{
+  display: none;
+ }
