--- a/assets/sass/_single-cam-nang.scss
+++ b/assets/sass/_single-cam-nang.scss
@@ -2,7 +2,7 @@
   // background-color: #9CA3AF;
 
   .left_cm {
-    padding: 20px;
+    // padding: 20px;
     @media (max-width: 600px) {
       padding: 0px;
     }
@@ -214,7 +214,7 @@
 }
 .bg_left {
   background-color: #fff;
-  padding-top: 20px;
+  // padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 8px;
 }
