--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -36,6 +36,10 @@
           color: white;
           margin-right: 5px;
           padding-bottom: 15px;
+          a{
+            color: #fff;
+            padding-left: 5px;
+          }
       }
     }
     #my-custom-menu{
@@ -85,6 +89,9 @@
   align-items: center;
   padding-top: 8px;
   padding-bottom: 8px;
+  @media screen and (max-width: 1100px) {
+    padding-bottom: 60px;
+   }
     
   }
   &_left{
