--- a/assets/sass/_home-feedback.scss
+++ b/assets/sass/_home-feedback.scss
@@ -2,13 +2,15 @@
   height: 400px;
   position: relative;
   backdrop-filter: blur(10px);
-
   background: url(https://i.imgur.com/V0nMhB0.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
+  @media screen and (max-width: 500px) {
+    height: auto;
+  }
   .feedback {
     &_wrap {
     }
@@ -75,6 +77,9 @@
     right: 0;
     bottom: 0;
     left: 0;
+    @media screen and (max-width: 500px) {
+      height: auto;
+    }
   }
 }
 
