--- a/assets/sass/gioi-thieu/_our-partners.scss
+++ b/assets/sass/gioi-thieu/_our-partners.scss
@@ -13,6 +13,9 @@
       font-weight: 700;
       line-height: 32px;
       text-align: center;
+      @media (max-width: 600px) {
+        font-size: 24px;
+      }
     }
     .item_our_partners {
       img {
