--- a/assets/sass/tai-khoan/_edit-account.scss
+++ b/assets/sass/tai-khoan/_edit-account.scss
@@ -15,10 +15,10 @@
     display: flex;
     justify-content: space-between;
   }
-  .col-lg-6{
+  .col-lg-6 {
     width: 48%;
     @media screen and (max-width: 800px) {
-        width: 100%;
+      width: 100%;
     }
   }
 }
@@ -35,10 +35,10 @@
     display: flex;
     justify-content: space-between;
   }
-  .col-lg-6{
+  .col-lg-6 {
     width: 48%;
     @media screen and (max-width: 800px) {
-        width: 100%;
+      width: 100%;
     }
   }
 }
@@ -50,7 +50,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
-  &:focus{
+  &:focus {
     border-color: #f92296;
     box-shadow: 0 0 5px #f92296;
     transition: border-color 0.3s, box-shadow 0.3s;
@@ -59,7 +59,6 @@
 .woocommerce-form-row label {
   font-weight: bold;
 }
-
 
 fieldset {
   display: none;
@@ -73,7 +72,7 @@ fieldset {
   border-radius: 5px;
   cursor: pointer;
   transition: background 0.3s, transform 0.2s;
-  &:hover{
+  &:hover {
     transform: scale(1.05);
   }
 }
@@ -88,4 +87,9 @@ fieldset {
   button.button:hover {
   background-color: #f92296;
   color: #fff;
+}
+.woocommerce-address-fields__field-wrapper {
+  @media screen and (max-width: 900px) {
+    margin-bottom: 10px !important;;
+  }
 }
