--- a/assets/sass/tai-khoan/_lost-password.scss
+++ b/assets/sass/tai-khoan/_lost-password.scss
@@ -11,14 +11,14 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
-    &:focus{
-        border-color: #f92296;
-        box-shadow: 0 0 5px #f92296;
-        transition: border-color 0.3s, box-shadow 0.3s;
+    &:focus {
+      border-color: #f92296;
+      box-shadow: 0 0 5px #f92296;
+      transition: border-color 0.3s, box-shadow 0.3s;
     }
   }
   .woocommerce-Button {
-    background-color: #F92296 !important;
+    background-color: #f92296 !important;
     color: #fff !important;
     padding: 5px 20px;
     border: none;
@@ -27,43 +27,80 @@
     animation: pulse 1s infinite alternate;
   }
 }
-.woocommerce-error li{
-    margin-left: 40px !important;
+.woocommerce-error li {
+  margin-left: 40px !important;
 }
-.reset_pass{
-    margin-top: 20px;
-    p{
-        font-size: 18px;
+.reset_pass {
+  margin-top: 20px;
+  p {
+    font-size: 18px;
+  }
+  .woocommerce-Input {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    &:focus {
+      border-color: #f92296;
+      box-shadow: 0 0 5px #f92296;
+      transition: border-color 0.3s, box-shadow 0.3s;
     }
-    .woocommerce-Input {
-        width: 100%;
-        padding: 10px;
-        margin: 5px 0;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 16px;
-        &:focus{
-            border-color: #f92296;
-            box-shadow: 0 0 5px #f92296;
-            transition: border-color 0.3s, box-shadow 0.3s;
-        }
-      }
-      .woocommerce-Button {
-        background-color: #F92296 !important;
-        color: #fff !important;
-        padding: 5px 20px;
-        border: none;
-        border-radius: 5px;
-        transition: background-color 0.3s ease;
-        animation: pulse 1s infinite alternate;
-      }
+  }
+  .woocommerce-Button {
+    background-color: #f92296 !important;
+    color: #fff !important;
+    padding: 5px 20px;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    animation: pulse 1s infinite alternate;
+  }
 }
-.confirmation_msg{
-    margin-top: 20px;
+.confirmation_msg {
+  margin-top: 20px;
 }
-.woocommerce-notices-wrapper{
-    margin: 0px;
+.woocommerce-notices-wrapper {
+  margin: 0px;
 }
 .woocommerce-message {
-    margin: 0;
+  margin: 0;
+}
+
+.lost_pass_wrap {
+  display: flex;
+  margin: 20px auto;
+  background: var(--color-gray-gray-11-main-white, #fff);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.12);
+  max-width: 800px;
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+  }
+  .lost_pass_img {
+   width: 500px;
+    @media screen and (max-width: 500px) {
+      order: 2;
+      max-width: 100%;
+    }
+  }
+}
+
+// reset password
+.reset_pass_wrap {
+  display: flex;
+  margin: 10px auto 20px auto;
+  background: var(--color-gray-gray-11-main-white, #fff);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.12);
+  max-width: 800px;
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+  }
+  .reset_pass_img {
+   width: 500px;
+    @media screen and (max-width: 500px) {
+      order: 2;
+      max-width: 100%;
+    }
+  }
 }
