--- a/assets/sass/tai-khoan/_order-detail.scss
+++ b/assets/sass/tai-khoan/_order-detail.scss
@@ -3,16 +3,21 @@
     border-radius: 8px;
     padding: 10px;
     margin-bottom: 20px;
+    .info_order_mobile{
+        display: none;
+        @media screen and (max-width: 600px) {
+            display: block;
+            display: flex;
+            justify-content: space-between;
+          }
+    }
 }
 .custom-tabs {
     position: relative;
     list-style: none;
-    /* Remove list item bullets */
     padding: 0;
     overflow: hidden;
-    /* Hide overflow to prevent a horizontal scrollbar */
     display: flex;
-    /* Make tabs flex items */
     border: none;
 }
 
@@ -22,12 +27,10 @@
 
 .custom-tab-link {
     flex: 1;
-    /* Distribute available space evenly among tabs */
     position: relative;
     padding: 15px 0;
     text-align: center;
     color: #555;
-    /* Default text color */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,32 +48,26 @@
     display: block;
     margin: 0 auto;
     background-color: #ddd;
-    /* Default icon background color */
     border-radius: 50%;
     padding: 15px;
     margin-bottom: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     color: #555;
-    /* Default icon color */
 }
 
 .custom-tab-link.active {
     color: #fff;
-    /* Active text color */
     border: none;
     background-color: transparent !important;
 }
 
 .custom-tab-link.active .custom-tab-icon {
     background-color: #4CAF50;
-    /* Active icon background color */
     color: #fff;
-    /* Active icon color */
 }
 
 .custom-tab-link.active:before {
     background-color: #4CAF50;
-    /* Active line color */
 }
 
 
@@ -99,9 +96,9 @@
 
 .custom-tab-link:not(.active)~.custom-tab-link::before {
     background-color: #ddd;
-    /* Inactive line color */
 }
 
 .nav-tabs .nav-item {
     padding-left: 10%;
 }
+
