--- a/assets/sass/tai-khoan/_sidebar.scss
+++ b/assets/sass/tai-khoan/_sidebar.scss
@@ -62,6 +62,7 @@
       a {
         transition: all 0.3s linear;
         font-size: 18px;
+        color: #000;
       }
       &:hover {
         // background-color: #FEE4F2;
